<resources>
    <string name="splash_sub_title">SEKELUARGA</string>
    <string name="splash_sub_text">Merupakan aplikasi yang dibangun dalam rangka memenuhi Praktikum
    Pemrograman Mobile yang dibangun oleh Kelompok 5</string>
    <string name="footer_akun_belum">Belum Punya Akun?</string>
    <string name="footer_akun_sudah">Sudah Punya Akun?</string>

    <string name="app_name">Praktikum</string>
    <string name="login_text">Login</string>
    <string name="login_title">Halaman Login</string>
    <string name="logout_title">Logout</string>
    <string name="register_title">Register</string>
    <string name="register_text">Halaman Register</string>
    <string name="login_register_link">Don\'t Have Account? </string>
    <string name="register_login_link">Already Have Account? </string>
    <string name="email_placeholder">Email Address</string>
    <string name="password_placeholder">Password</string>
    <string name="name_placeholder">Name</string>

    <string name="add_data_placeholder">Add Data</string>
    <string name="update_data_placeholder">Update Data</string>
    <string name="delete_data_placeholder">Delete Data</string>
    <string name="placeholder_nama">Nama</string>
    <string name="placeholder_jenis_kelamin">Jenis Kelamin</string>
    <string name="placeholder_tempat_lahir">Tempat Lahir</string>
    <string name="placeholder_tanggal_lahir">Tanggal Lahir</string>
    <string name="placeholder_agama">Agama</string>
    <string name="placeholder_pendidikan">Pendidikan</string>
    <string name="placeholder_pekerjaan">Pekerjaan</string>
    <string name="placeholder_tipe">Tipe</string>
    <string name="placeholder_ayah">Ayah</string>
    <string name="placeholder_ibu">Ibu</string>
    <string name="placeholder_validasi">Validasi</string>

    <string-array name="spinner_jenis_kelamin">
        <item>LAKI-LAKI</item>
        <item>PEREMPUAN</item>
    </string-array>

    <string-array name="spinner_user_role">
        <item>user</item>
        <item>admin</item>
    </string-array>

    <string-array name="spinner_id_user">
        <item>null</item>
    </string-array>

    <string-array name="spinner_validasi">
        <item>process</item>
        <item>problem</item>
        <item>validated</item>
    </string-array>

    <string-array name="spinner_tipe">
        <item>Suami</item>
        <item>Istri</item>
        <item>Anak</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bnav_home">Home</string>
    <string name="bnav_profile">Profile</string>
    <string name="bnav_keluarga">Keluarga</string>
    <string name="bnav_add">Add</string>
    <string name="bnav_logout">Logout</string>
    <string name="bnav_user">User</string>
</resources>