<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_user_home"
        android:icon="@drawable/ic_home"
        android:title="@string/bnav_home"/>
    <item
        android:id="@+id/menu_user_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/bnav_profile"/>
    <item
        android:id="@+id/menu_user_keluarga"
        android:icon="@drawable/ic_keluarga"
        android:title="@string/bnav_keluarga"/>
    <item
        android:id="@+id/menu_user_add"
        android:icon="@drawable/ic_add"
        android:title="@string/bnav_add"/>
    <item
        android:id="@+id/menu_user_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/bnav_logout"/>
</menu>