<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SplashActivity"
    android:background="@color/colorWhitePrimary"
    android:id="@+id/splash_wrapper">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/header"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingHorizontal="36dp"
        android:paddingVertical="48dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lemonmilk_bold"
            android:text="@string/splash_sub_title"
            android:textColor="@color/colorBluePrimary"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/splash_sub_text"
            android:textColor="@color/colorBlackPrimary"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">
            <Button
                android:id="@+id/btn_splash_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn_blue"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/login_text"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/colorWhitePrimary"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/footer_akun_belum"
                    android:textColor="@color/colorBlackPrimary"
                    android:textSize="13sp"/>
                <TextView
                    android:id="@+id/btn_splash_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/register_title"
                    android:textColor="@color/colorBluePrimary"
                    android:textSize="13sp"
                    android:layout_marginLeft="4dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>