<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_cons_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBluePrimary"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="90dp"
        android:scaleType="fitEnd"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_white" />

    <LinearLayout
        android:id="@+id/layout_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/login_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/login_title"
            android:textColor="@color/colorWhitePrimary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/login_email_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_btn_white"
            android:ems="10"
            android:hint="@string/email_placeholder"
            android:inputType="textEmailAddress"
            android:padding="18dp"
            android:textColor="@color/colorBluePrimary"
            android:textColorHint="@color/colorBlueSecondary" />

        <EditText
            android:id="@+id/login_password_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_btn_white"
            android:ems="10"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@color/colorBluePrimary"
            android:textColorHint="@color/colorBlueSecondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/login_submit_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_white"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/login_text"
                android:textAllCaps="false"
                android:textColor="@color/colorBluePrimary"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorWhitePrimary"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/footer_akun_belum"
            android:textColor="@color/colorBlackPrimary"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/register_title"
            android:textColor="@color/colorBluePrimary"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/login_register_link"
            app:layout_constraintStart_toEndOf="@+id/login_register_link"
            app:layout_constraintTop_toTopOf="@+id/login_register_link" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>